# PaintApp

./: .gitignore  CMakeLists.txt  CompileAndRun.bat  LICENSE  README.md  Run.bat  TODO.txt
Fonts/: .gitignore
InternalData/: InitializationData.txt  LayerWindow.txt  NewCanvasWindow.txt  PencilWindow.txt  PreferencesWindow.txt  ToolWindow.txt  ToolWindowColorpicker.txt  ToolWindowEraser.txt  ToolWindowPencil.txt
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
src/: engineInternals.cpp  engineInternals.hpp  logger.cpp  logger.hpp  main.cpp  options.cpp  options.hpp  paintTools.cpp  paintTools.hpp  paintingTools.cpp  paintingTools.hpp  renderLib.cpp  renderLib.hpp
